--- a/dispenser/src/templates/index.html
+++ b/dispenser/src/templates/index.html
@@ -1,16 +1,123 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>PetFoodDispenser</title>
-</head>
-<body>
-<div id="banner">
-<pre>
-    
-PetFoodDispenser
+<meta charset="UTF-8">
+<html>
+   <head>
+      <style>
+         input[type=number], select {
+            width: 100%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+         }
+         input[type=button] {
+            width: 100%;
+            background-color: #4CAF50;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 20px;
+         }
+         input[type=button]:hover {
+            background-color: #45a049;
+         }
+         div {
+            border-radius: 5px;
+            background-color: #f2f2f2;
+            padding: 20px;
+         }
+         .box {
+            display: flex;
+         }
+         .camera {
+            justify-content: center;
+         }
+      </style>
+   </head>
+   <body>
+      <div class="box">
+      <div class="form">
+         <h1>PetFood-Dispenser</h1>
+         <form id="form">
+            <div>
+               <label for="open_angle">Abertura</label>
+               <input type="number" id="open-angle-input" name="open-angle-input" id="form1" value="30">
+               <label for="close_angle">Fechamento</label>
+               <input type="number" id="close-angle-input" name="open-angle-input" id="form1" value="0">
+               <label for="open_seconds">Duração</label>
+               <input type="number" id="open-seconds-input" name="open-angle-input" id="form1" value="0.2">
+               <input type="button" class="button feed" value="Comida!" id="feed-button">
+            </div>
+         </form>
+      </div>
+      <div class="camera">
+         <img src="static/camera-512px.png" alt="Camera icon" width="450"> 
+      </div>
+   </body>
+   <script>
+      const rootAddress = window.location.href 
+      
+      console.log(rootAddress)
 
-</pre>
-</div>
-</body>
+      const callEndpoint = async (method, endpoint, data = null) => {
+         const url = rootAddress + endpoint
+         const settings = {
+            method: method,
+            headers: {
+                  'Accept': 'application/json',
+                  'Content-Type': 'text/html'
+            }
+         }
+
+         if (data){
+            settings.headers['Content-Type'] = 'application/json'
+            settings.body = JSON.stringify(data)
+         }
+
+         let response
+
+         await fetch(url, settings)
+            .then(response => response.json())
+            .then(jsonData => response = jsonData.message)
+         
+         try {
+            switch (response.status) {
+                  case 'SUCCESS':
+                     console.log("OK")
+                     return response
+                  case 'ERROR':
+                     console.log("ERROR")
+                     throw new Error('Unexpected error: ' + response.description)
+                  default:
+                     console.log(response)
+                     console.log("DEFAULT")
+                     throw new Error(response.response)
+            }
+         } catch (error) {
+            console.log(error)
+            console.log("CATCH")
+            throw new Error(error)
+         }    
+      }
+
+      const feed = (open_angle, close_angle, open_seconds) => {
+         return callEndpoint('POST'
+         , '/api/dispenser/feed?open_angle=' + open_angle + '&close_angle=' + close_angle + '&open_seconds=' + open_seconds)
+      }
+
+      const openAngleInput   = document.getElementById('open-angle-input')
+      const closeAngleInput  = document.getElementById('close-angle-input')
+      const openSecondsInput = document.getElementById('open-seconds-input')
+      const buttonFeed       = document.getElementById('feed-button')
+
+      buttonFeed.addEventListener('click',
+         function(){feed(openAngleInput.value, closeAngleInput.value, openSecondsInput.value)}
+      )
+
+   </script>
 </html>
