added telegram integration

--- a/dispenser/src/templates/index.html
+++ b/dispenser/src/templates/index.html
@@ -41,22 +41,23 @@
    </head>
    <body>
       <div class="box">
-      <div class="form">
-         <h1>PetFood-Dispenser</h1>
-         <form id="form">
-            <div>
-               <label for="open_angle">Abertura</label>
-               <input type="number" id="open-angle-input" name="open-angle-input" id="form1" value="30">
-               <label for="close_angle">Fechamento</label>
-               <input type="number" id="close-angle-input" name="open-angle-input" id="form1" value="0">
-               <label for="open_seconds">Duração</label>
-               <input type="number" id="open-seconds-input" name="open-angle-input" id="form1" value="0.2">
-               <input type="button" class="button feed" value="Comida!" id="feed-button">
-            </div>
-         </form>
-      </div>
-      <div class="camera">
-         <img src="static/camera-512px.png" alt="Camera icon" width="450"> 
+         <div class="form">
+            <h1>PetFood-Dispenser</h1>
+            <form id="form">
+               <div>
+                  <label for="form">Abertura</label>
+                  <input type="number" id="open-angle-input" name="open-angle-input" value="30">
+                  <label for="form">Fechamento</label>
+                  <input type="number" id="close-angle-input" name="open-angle-input" value="0">
+                  <label for="form">Duração</label>
+                  <input type="number" id="open-seconds-input" name="open-angle-input" value="0.2">
+                  <input type="button" class="button feed" value="Comida!" id="feed-button">
+               </div>
+            </form>
+         </div>
+         <div class="camera">
+            <img src="static/camera-512px.png" alt="Camera icon" width="450">
+         </div>
       </div>
    </body>
    <script>
