--- a/dispenser/src/templates/index.html
+++ b/dispenser/src/templates/index.html
@@ -2,14 +2,17 @@
 <meta charset="UTF-8">
 <html>
    <head>
-      <link rel="stylesheet" href="static/style.css"><link/>
+      <link rel="stylesheet" href="../static/style.css"><link/>
    </head>
    <body>
       <div>
-         <h1>PetFood-Dispenser</h1>
+         <h1>Hora de comer!</h1>
          <form id="form">
             <div>
-               <div class="box">
+               <div class="input_box">
+                  <div class="camera">
+                     <img src="../static/camera-512px.png" alt="Camera icon" id="picture-img" width="250"/>
+                  </div>
                   <div>
                      <label for="form">Abertura</label>
                      <input type="number" id="open-angle-input" name="open-angle-input" value="30">
@@ -18,21 +21,20 @@
                      <label for="form">Duração</label>
                      <input type="number" id="open-seconds-input" name="open-angle-input" value="0.2">
                   </div>
-                  <div class="camera">
-                     <img src="static/camera-512px.png" alt="Camera icon" id="picture-img" width="250"/>
-                  </div>
                </div>
-               <div class="buttons">
-                  <input type="button" class="button feed" value="Comida!" id="feed-button">
-                  <div class="box">
-                     <input type="button" class="button" value="Abrir" id="open-button">
+               <div class="button_feed">
+                  <input type="button" value="🐶 Comida! 🐱" id="feed-button">
+                  <div class="buttons_box">
+                     <input type="button" value="Abrir" id="open-button">
                      <p>&nbsp;&nbsp;</p>
-                     <input type="button" class="button" value="Fechar" id="close-button">
+                     <input type="button" value="📷 Foto" id="photo-button">
+                     <p>&nbsp;&nbsp;</p>
+                     <input type="button" value="Fechar" id="close-button">
                   </div>
                </div>
             </div>
          </form>
       </div>
    </body>
-   <script src="static/script.js">JS</script>
+   <script src="../static/script.js">JS</script>
 </html>
