--- a/dispenser/src/templates/index.html
+++ b/dispenser/src/templates/index.html
@@ -3,6 +3,7 @@
 <html>
    <head>
       <link rel="stylesheet" href="../static/style.css"><link/>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
    <body>
       <div>
