--- a/dispenser/src/templates/index.html
+++ b/dispenser/src/templates/index.html
@@ -6,15 +6,15 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
    <body>
-      <div>
+      <div class="box">
          <h1>Hora de comer!</h1>
          <form id="form">
-            <div>
+            <div class="box">
                <div class="input_box">
-                  <div class="camera">
-                     <img src="../static/camera-512px.png" alt="Camera icon" id="picture-img" width="250"/>
+                  <div class="camera box">
+                     <img src="../static/camera-512px.png" alt="Camera icon" id="picture-img"/>
                   </div>
-                  <div>
+                  <div class="form box">
                      <label for="form">Abertura</label>
                      <input type="number" id="open-angle-input" name="open-angle-input" value="30">
                      <label for="form">Fechamento</label>
@@ -23,7 +23,7 @@
                      <input type="number" id="open-seconds-input" name="open-angle-input" value="0.2">
                   </div>
                </div>
-               <div class="button_feed">
+               <div class="button box">
                   <input type="button" value="🐶 Comida! 🐱" id="feed-button">
                   <div class="buttons_box">
                      <input type="button" value="Abrir" id="open-button">
@@ -34,7 +34,7 @@
                   </div>
                </div>
             </div>
-         </form>
+         </form>  
       </div>
    </body>
    <script src="../static/script.js">JS</script>
